fix overflow/scrolling due to line-height and tall glyphs

--- a/src/markup.css
+++ b/src/markup.css
@@ -1,6 +1,7 @@
 .markup-root {
 	white-space: pre-wrap;
 	overflow-x: auto;
+	overflow-y: hidden; overflow-y: clip;
 }
 
 .markup-root * {
